Course Explorer and start of scheduling

--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -20,6 +20,13 @@
 	<button type="button" class="btn btn-primary" id="datasetAdd">Add Dataset</button>
 	<button type="button" class="btn btn-primary" id="datasetRm">Remove Dataset</button>
     </div>
+    <div id="roomscheduling">
+        <div class="form-group">
+            <h3>insightUBC</h3>
+            <a href="/CourseExplorer" class="btn btn-primary" id="courseExplorer">Course Explorer</a>
+            <a href="/RoomScheduling" class="btn btn-primary" id="scheduling">Room Scheduling</a>
+        </div>
+    </div>
     <div id="container">
       <h3>Query</h3>
       <form id="queryForm">
