--- a/src/rest/public/RoomScheduling.css
+++ b/src/rest/public/RoomScheduling.css
@@ -1,10 +1,17 @@
-#container, #render, #dataset, #roomscheduling {
+#container, #render {
     width:80%;
     margin:auto;
     margin-top:10px;
     border-style:solid;
+    border-color:#7da8ed;
     padding:10px;
 }
+
+
+h1 {
+    text-align: center;
+}
+
 th {
     text-align: left;
 }
