Base case of scheduling complete

--- a/src/rest/views/RoomScheduling.html
+++ b/src/rest/views/RoomScheduling.html
@@ -21,6 +21,8 @@
             <div class="form-group" id="buildingN">
                 <label for="BD">Building Name:</label>
                 <input type="text" class="form-control" id="BD" placeholder="e.g. DMP">
+                <label for="BD2">Building Name:</label>
+                <input type="text" class="form-control" id="BD2" placeholder="e.g. DMP">
             </div>
 
             <div class="form-group" id="dist">
@@ -32,19 +34,19 @@
 
             <h3>Course Selection</h3>
 
-            <button type="button" class="btn btn-primary" id="dep">Course Department</button>
-            <button type="button" class="btn btn-primary" id="depAndNum">Course Department and Number</button>
+            <button type="button" class="btn btn-primary" id="dep">Course Department and Number</button>
+            <button type="button" class="btn btn-primary" id="depAndNum">Course Department</button>
 
             <div class="form-group" id="courseD">
                 <label for="CD">Course Department:</label>
                 <input type="text" class="form-control" id="CD" placeholder="e.g. CPSC">
+                <label for="CN">Course Number:</label>
+                <input type="text" class="form-control" id="CN" placeholder="e.g. 213">
             </div>
 
             <div class="form-group" id="courseN">
                 <label for="courseDep">Course Department:</label>
                 <input type="text" class="form-control" id="courseDep" placeholder="e.g. CPSC">
-                <label for="courseNum">Course Number:</label>
-                <input type="text" class="form-control" id="courseNum">
             </div>
 
             <button type="button" class="btn btn-primary" id="submit">Create Schedule!</button>
