Additional input checks

--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -24,37 +24,38 @@
         <div class="form-group">
             <h3>insightUBC</h3>
             <a href="/CourseExplorer" class="btn btn-primary" id="courseExplorer">Course Explorer</a>
+            <a href="/RoomExplorer" class="btn btn-primary" id="roomExplorer">Room Explorer</a>
             <a href="/RoomScheduling" class="btn btn-primary" id="scheduling">Room Scheduling</a>
         </div>
     </div>
-    <div id="container">
-      <h3>Query</h3>
-      <form id="queryForm">
-	<div class="form-group">
-	  <label for="query">Query:</label>
-	  <textarea class="form-control" rows="10" id="query"></textarea>
-	</div>
-	<button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-    <div id="render">
-      <h3>Result</h3>
-    </div>
-    <div class="modal fade" id="errorModal" tabindex="-1" role="dialog">
-      <div class="modal-dialog" role="document">
-	<div class="modal-content">
-	  <div class="modal-header">
-	    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	    <h4 class="modal-title"></h4>
-	  </div>
-	  <div class="modal-body">
-	    <p></p>
-	  </div>
-	  <div class="modal-footer">
-	    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	  </div>
-	</div>
-      </div>
-      </div>
+    <!--<div id="container">-->
+      <!--<h3>Query</h3>-->
+      <!--<form id="queryForm">-->
+	<!--<div class="form-group">-->
+	  <!--<label for="query">Query:</label>-->
+	  <!--<textarea class="form-control" rows="10" id="query"></textarea>-->
+	<!--</div>-->
+	<!--<button type="submit" class="btn btn-primary">Submit</button>-->
+      <!--</form>-->
+    <!--</div>-->
+    <!--<div id="render">-->
+      <!--<h3>Result</h3>-->
+    <!--</div>-->
+    <!--<div class="modal fade" id="errorModal" tabindex="-1" role="dialog">-->
+      <!--<div class="modal-dialog" role="document">-->
+	<!--<div class="modal-content">-->
+	  <!--<div class="modal-header">-->
+	    <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
+	    <!--<h4 class="modal-title"></h4>-->
+	  <!--</div>-->
+	  <!--<div class="modal-body">-->
+	    <!--<p></p>-->
+	  <!--</div>-->
+	  <!--<div class="modal-footer">-->
+	    <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+	  <!--</div>-->
+	<!--</div>-->
+      <!--</div>-->
+      <!--</div>-->
   </body>
 </html>
