Contribution file + setup

--- a/src/rest/views/CourseExplorer.html
+++ b/src/rest/views/CourseExplorer.html
@@ -26,7 +26,7 @@
         <datalist id="courseno-datalist"></datalist><p>
 
         <b>Instructor: </b>
-        <input type="text" id="instructor" list="instructor-datalist" placeholder="e.g. Reid Holmes">
+        <input type="text" id="instructor" list="instructor-datalist" placeholder="e.g. kiczales, gregor">
         <datalist id="instructor-datalist"></datalist><p>
 
         <b>Title: </b>
